# AgentOrchestratedCodeFactory

./: .gitignore  BRANCH_MERGE_PLAN.md  CONTRIBUTING.md  Claude.md  GITHUB_SETUP.md  INTEGRATION_PROMPT.md  INTEGRATION_SUMMARY.md  LICENSE  MULTI_AGENT_KICKSTART_SUMMARY.md  PROJECT_LEARNINGS.md  PROJECT_SUMMARY.md  README.md  SETUP.md  STEP1_COMPLETE.md  WAVE_1_MERGE_COMMANDS.sh  WAVE_1_REVIEW.md  WORKFLOW_STATE.json  pyproject.toml
.github/workflows/: ci.yml
AGENT_PROMPTS/: 1_Backend_Infrastructure_Engineer.md  1_Pipeline_Integration_Engineer.md  2_Code_Generation_Engineer.md  2_LLM_Integration_Specialist.md  3_Agent_Implementation_Developer.md  3_Git_Operations_Engineer.md  4_Testing_Documentation_Engineer.md  4_Testing_Quality_Engineer.md  5_Templates_Documentation_Specialist.md  COORDINATION.md  GIT_WORKFLOW.md  PHASE_4_LAUNCH_PROMPTS.md  README.md  questions.md
AGENT_PROMPTS/WAVE_1/: 1_agent_foundation_dev.md  2_qa_engineer.md  3_technical_writer.md
AGENT_PROMPTS/WAVE_2/: 1_core_pipeline_engineer.md  2_agent_implementation_engineer.md  3_cli_code_quality_engineer.md  4_qa_documentation_engineer.md
AGENT_PROMPTS/daily_logs/: 2025-11-17.md  TEMPLATE.md
docs/: agent_integration.md  agent_roles.md  architecture.md  cli_usage.md  code_generation.md  configuration.md  safety.md
docs/agents/: TEMPLATE.md  architect_agent.md  doc_writer_agent.md  planner_agent.md  tester_agent.md
src/code_factory/: __init__.py
tests/: __init__.py  conftest.py  test_smoke.py
tests/e2e/: test_factory_run.py
tests/harness/: README.md  __init__.py  agent_test_harness.py  (+6 more)
(+64 files in other folders)
